WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
106892
[Qt] WebGL does not require accelerated compositing
https://bugs.webkit.org/show_bug.cgi?id=106892
Summary
[Qt] WebGL does not require accelerated compositing
Allan Sandfeld Jensen
Reported
2013-01-15 04:52:45 PST
The GraphicsContext3D used by WebGL does not require accelerated compositing to be enabled anymore. This means we can enable it in all cases.
Attachments
Patch
(1.53 KB, patch)
2013-01-15 04:53 PST
,
Allan Sandfeld Jensen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Allan Sandfeld Jensen
Comment 1
2013-01-15 04:53:55 PST
Created
attachment 182742
[details]
Patch
WebKit Review Bot
Comment 2
2013-01-15 08:03:23 PST
Comment on
attachment 182742
[details]
Patch Clearing flags on attachment: 182742 Committed
r139742
: <
http://trac.webkit.org/changeset/139742
>
WebKit Review Bot
Comment 3
2013-01-15 08:03:27 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug