[Qt] WebGL does not require accelerated compositing https://bugs.webkit.org/show_bug.cgi?id=106892

Reviewed by Jocelyn Turcotte.

Allow the creation of WebGL canvas even when accelerated compositing is not enabled.

* html/HTMLCanvasElement.cpp:
(WebCore::HTMLCanvasElement::getContext):


Canonical link: https://commits.webkit.org/125127@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@139742 268f45cc-cd09-0410-ab3c-d52691b4dbfc